# practice

./: .gitignore  README.md
aoc/: Cargo.toml
aoc/2021/: Cargo.toml
aoc/2021/src/: day01.rs  day02.rs  day03.rs  day05.rs
aoc/2022/: Cargo.toml
aoc/2022/src/: 01.rs  aoc.rs
aoc/2023/: Cargo.toml
aoc/2023/src/: day01.rs  day02.rs  day04.rs  day05.rs  day06.rs  day07.rs  lib.rs
aoc/2024/: .gitignore  flake.nix  go.mod
aoc/2024/day01/: day01.go  day01_test.go
aoc/2024/day02/: main.py
aoc/2024/day03/: main.py
aoc/2024/day04/: main.py
aoc/2024/day05/: main.py
aoc/2024/day06/: main.py
aoc/2024/day07/: main.py
aoc/2024/day08/: main.py
aoc/src/: day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs
hackerrank/counting_valleys/: go.mod  main.go
hackerrank/jumping_on_the_clouds/: go.mod  main.go
hackerrank/repeated_string/: go.mod  main.go
hackerrank/sales_by_match/: go.mod  main.go
haskell_training/101/: Codelab.hs
leetcode/add-two-numbers/: go.mod  main.go
leetcode/longest-substring-without-repeating-characters/: go.mod
leetcode/maximum-time/: Cargo.toml
leetcode/most-booked-hotel-room/: Cargo.toml
leetcode/reverse-integer/: main.go
leetcode/tenth-line/: 10th.sh
leetcode/transpose-file/: trans.sh
leetcode/two-sum/: main.go
leetcode/word-frequency/: words.sh
neetcode/: anagram_groups.ts  best_time_buy_sell_stock.py  duplicate_integer.ts  duplicate_integer_test.ts  is_anagram.ts  is_anagram_test.ts  is_palindrome.py  rev_linked_list.py  top_k_elems_in_list.py  two_sum.ts  two_sum_test.ts  valid_parentheses.py
(+47 files in other folders)
